logs/pywits.log
Listing '.'...
Listing './bin'...
Compiling './bin/miniterm.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyWITS'...
Listing './lib/python3.5/site-packages/PyWITS/Objects'...
Compiling './lib/python3.5/site-packages/PyWITS/Objects/Identifier.py'...
***   File "./lib/python3.5/site-packages/PyWITS/Objects/Identifier.py", line 17
    print "??",raw
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyWITS/Receiver.py'...
***   File "./lib/python3.5/site-packages/PyWITS/Receiver.py", line 53
    print repr(data)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/PyWITS/Simulation.py'...
***   File "./lib/python3.5/site-packages/PyWITS/Simulation.py", line 81
    print "Writing"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyWITS/Transmitter.py'...
***   File "./lib/python3.5/site-packages/PyWITS/Transmitter.py", line 14
    print repr(data_record.serialize())
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/PyWITS/test.py'...
***   File "./lib/python3.5/site-packages/PyWITS/test.py", line 32
    print td[2]
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/PyWITS-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyserial-3.4.dist-info'...
Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/serial/threaded'...
Listing './lib/python3.5/site-packages/serial/tools'...
Listing './lib/python3.5/site-packages/serial/urlhandler'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
